--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 
 <head>
-    <title>吃掉小鹿乃</title>
-    <meta itemprop="name" content="吃掉小鹿乃" />
+    <title>处刑张子麒</title>
+    <meta itemprop="name" content="处刑张子麒" />
     <meta itemprop="description" content="新概念音游" />
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
@@ -40,7 +40,7 @@
             </div>
             <br />
             <div id="btn_group" style="display: block;">
-                <a class="btn btn-primary btn-lg" onclick="readyBtn()">开始游戏</a>
+                <a class="btn btn-primary btn-lg" onclick="readyBtn()">开始处刑</a>
                 <br/><br/>
 
                 <div class="dropdown">
